src/test/deca/context/valid/provided/valide_19_initialization.deca
{
    // Test 19: Variable initialization

    int x = 25;
    float y = 3.14;
    boolean flag = false;

    println(x);
    println(y);
    println("Initialized");
}
