src/test/deca/context/invalid/provided/test_affectation_op_bool.deca
{
    int a;
    float b;
    if((a=3)==(b=3.0)==(b=3)==(a=3)){
        print("yes");
    }
}